# ChangeLog for app-admin/conky
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/conky/ChangeLog,v 1.31 2006/05/21 09:10:37 corsair Exp $

  21 May 2006; Markus Rothe <corsair@gentoo.org> conky-1.4.0-r1.ebuild:
  Stable on ppc64

  17 May 2006; Henrik Brix Andersen <brix@gentoo.org> conky-1.4.2.ebuild:
  Use dohtml for HTML documentation, use 'make' not 'emake' for install target.

*conky-1.4.2 (16 May 2006)

  16 May 2006; Daniel Black <dragonheart@gentoo.org> +conky-1.4.2.ebuild:
  version bump thanks to Brenden in bug #133439

  12 Apr 2006; Thomas Cort <tcort@gentoo.org> conky-1.4.1.ebuild:
  Added ~alpha keyword wrt Bug #122637.

  12 Apr 2006; Daniel Black <dragonheart@gentoo.org>
  +files/conky-sigaction.patch, conky-1.4.1.ebuild:
  patch for missing symbol (bug #129639) thanks to Thomas Cort and Brenden.

*conky-1.4.1 (11 Apr 2006)

  11 Apr 2006; Daniel Black <dragonheart@gentoo.org> conky-1.4.0-r1.ebuild,
  +conky-1.4.1.ebuild:
  version bump bug #126008 thanks Brenden and Philip

  11 Apr 2006; Daniel Black <dragonheart@gentoo.org> conky-1.4.0-r1.ebuild:
  dependency fix thanks to Diego and Philip bug #125226

  25 Mar 2006; Luis Medinas <metalgod@gentoo.org> conky-1.4.0-r1.ebuild:
  Stable on amd64. Bug #122079.

  03 Mar 2006; Joshua Jackson <tsunam@gentoo.org> conky-1.4.0-r1.ebuild:
  Stable on x86; bug #122079

  02 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org> conky-1.4.0-r1.ebuild:
  Stable on sparc wrt #122079

  02 Mar 2006; Lars Weiler <pylon@gentoo.org> conky-1.4.0-r1.ebuild:
  Stable on ppc; bug #122079.

*conky-1.4.0-r1 (01 Mar 2006)
*conky-1.3.5-r1 (01 Mar 2006)

  01 Mar 2006; Daniel Black <dragonheart@gentoo.org> -conky-1.3.5.ebuild,
  +conky-1.3.5-r1.ebuild, -conky-1.4.0.ebuild, +conky-1.4.0-r1.ebuild:
  remove bmpx dependancy as it is masked

  18 Feb 2006; Daniel Black <dragonheart@gentoo.org> conky-1.4.0.ebuild: