@@ -1,16 +1,74 @@
-MD5 d216c5f385c24cde602b592b77726355 ChangeLog 5414
-MD5 daec6353bf84e62c4edd4d82d00cd350 conky-1.3.4-r2.ebuild 2662
-MD5 18290bbc2ed560becdfe5c1eed21f28a conky-1.3.5-r1.ebuild 2247
-MD5 9414d701b6e6f58e166b756c07cbe368 conky-1.4.0-r1.ebuild 2552
-MD5 05f78f1fbc20a4cc5d1de8a1638bbbfd conky-1.4.1.ebuild 2678
-MD5 5bfe25e9d10740084c746a252a420606 conky-1.4.2.ebuild 2666
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+AUX conky-1.3.4-arraybounds.patch 1560 RMD160 dcb1c9b195a03e19b2e477dbc149228930588b52 SHA1 ac0ef4fd2de644b06f57dfecd27d0b76b99b4b40 SHA256 4d1eb88c938305b680e4880a8b0f34264b72d4083ce660ef8afdaead8a752710
 MD5 d9296cc5c3fc007026e784f5825b153e files/conky-1.3.4-arraybounds.patch 1560
+RMD160 dcb1c9b195a03e19b2e477dbc149228930588b52 files/conky-1.3.4-arraybounds.patch 1560
+SHA256 4d1eb88c938305b680e4880a8b0f34264b72d4083ce660ef8afdaead8a752710 files/conky-1.3.4-arraybounds.patch 1560
+AUX conky-1.3.4-miscbug.patch 2591 RMD160 dd4495070c8c5acc6ba60328536325b126e8ef92 SHA1 c2a286702547734e756bea5120b5ae4c1ee0d811 SHA256 5ebd3da731900f6db25c6cc1a3dbbb71d33e458b9f4d9b3fb1771bb7abdc218b
 MD5 3f930afeab86d38688b8c7fe8a610bc7 files/conky-1.3.4-miscbug.patch 2591
+RMD160 dd4495070c8c5acc6ba60328536325b126e8ef92 files/conky-1.3.4-miscbug.patch 2591
+SHA256 5ebd3da731900f6db25c6cc1a3dbbb71d33e458b9f4d9b3fb1771bb7abdc218b files/conky-1.3.4-miscbug.patch 2591
+AUX conky-sigaction.patch 408 RMD160 17519cf444661e3c227103fed5b3c1f611f98f8d SHA1 15355cb8bef537b159156cb148b2cfba2956e921 SHA256 59cd8f7a8634f6ec89370db16dff6c75156ada06459bc4725514e8f328546335
 MD5 2ecd81682f750b475c15c805a96b497f files/conky-sigaction.patch 408
-MD5 c55fb1487c2bca9b6ea69c92843bcaae files/digest-conky-1.3.4-r2 238
-MD5 113c0f8393e0eaac049cfd63dd5395ad files/digest-conky-1.3.5-r1 238
-MD5 dd1c99f09b0ec583eadca05832f8c5ea files/digest-conky-1.4.0-r1 238
-MD5 bb654fedea893b35ec7677d0dd6e1912 files/digest-conky-1.4.1 238
-MD5 8669fb84e545dd83e96aa87a60c83c67 files/digest-conky-1.4.2 238
+RMD160 17519cf444661e3c227103fed5b3c1f611f98f8d files/conky-sigaction.patch 408
+SHA256 59cd8f7a8634f6ec89370db16dff6c75156ada06459bc4725514e8f328546335 files/conky-sigaction.patch 408
+AUX portmon-mpd.patch 7143 RMD160 fe1ccafec1903de6c9b1db99e8278c06c86be2c9 SHA1 1921ac8589b1cce1f67c58570b75d1c977961c51 SHA256 6952b4756e2d59d34d00896b6e1a53d6514993dd0b53312c9b464ac9ba91b4b8
 MD5 5d84594f42f7e10ad9b8a6bf8617b5bd files/portmon-mpd.patch 7143
+RMD160 fe1ccafec1903de6c9b1db99e8278c06c86be2c9 files/portmon-mpd.patch 7143
+SHA256 6952b4756e2d59d34d00896b6e1a53d6514993dd0b53312c9b464ac9ba91b4b8 files/portmon-mpd.patch 7143
+DIST conky-1.3.4.tar.bz2 332871 RMD160 13f61eaada0171f5c60010941cbed3b030ff99b8 SHA256 049e490936769d3b4ce7c2d9a240dc61a31aa065ec0ccd8e4ab0dcd35cdca99e
+DIST conky-1.3.5.tar.bz2 339478 RMD160 d3054cfeb896c16f753830e023ab5e0896de1040 SHA256 5e7ac1fb87073bef4565066920e98923a04207cf7519a4552de99f19d027a6e5
+DIST conky-1.4.0.tar.bz2 361968 RMD160 dceee3ae83fb1aa34473b61bc1a1287bef38d14c SHA256 75480c7cfe1741d7c881e6309e11573b1ce22f9242d35e12f0b3a9d593c6960e
+DIST conky-1.4.1.tar.bz2 364106 RMD160 c8a20d9331e363a05b3a233ff2a4d4dbf875e1c0 SHA256 ea12650dfe96bec612fa0185f3191bd882a7381d80726ef510f113ce226f3e40
+DIST conky-1.4.2.tar.bz2 400574 RMD160 9622c9e5115dc5bfb6995424cfc66d3a6f90002e SHA256 e792a1ea4f865225e6f9d1e4cafd405745390a09d48d4a8936d4b0556e6e32b2
+EBUILD conky-1.3.4-r2.ebuild 2662 RMD160 cb44f4d794c053ce408b57c4efadb8ada3239204 SHA1 c214ff9ae57be8d108eb1f75b868ea97e3dc0d1d SHA256 a5f19b74b6edcbf2b1e307239add9960b8e2b3e01f8f32e1da90e2cc79ab1736
+MD5 daec6353bf84e62c4edd4d82d00cd350 conky-1.3.4-r2.ebuild 2662
+RMD160 cb44f4d794c053ce408b57c4efadb8ada3239204 conky-1.3.4-r2.ebuild 2662
+SHA256 a5f19b74b6edcbf2b1e307239add9960b8e2b3e01f8f32e1da90e2cc79ab1736 conky-1.3.4-r2.ebuild 2662
+EBUILD conky-1.3.5-r1.ebuild 2247 RMD160 a37dedf494b4b89e7656a175590b4b971fa2e6f0 SHA1 77f2947715cf89e9e740a3fae80e2ebf1774088f SHA256 b59fc2bfcf438818650a43063a569d69e927cb040f52bb24c812bd22b4c37222
+MD5 18290bbc2ed560becdfe5c1eed21f28a conky-1.3.5-r1.ebuild 2247
+RMD160 a37dedf494b4b89e7656a175590b4b971fa2e6f0 conky-1.3.5-r1.ebuild 2247
+SHA256 b59fc2bfcf438818650a43063a569d69e927cb040f52bb24c812bd22b4c37222 conky-1.3.5-r1.ebuild 2247
+EBUILD conky-1.4.0-r1.ebuild 2552 RMD160 c349fad9f2bf0475d91fc40edd632dc51182dde0 SHA1 33dc995f2f4177853e4bff96c5a9f3c49a062206 SHA256 c7b6e85af391cc83424db2445e4812a7a02dd7bff2abd63c1223062f3abae5aa
+MD5 9414d701b6e6f58e166b756c07cbe368 conky-1.4.0-r1.ebuild 2552
+RMD160 c349fad9f2bf0475d91fc40edd632dc51182dde0 conky-1.4.0-r1.ebuild 2552
+SHA256 c7b6e85af391cc83424db2445e4812a7a02dd7bff2abd63c1223062f3abae5aa conky-1.4.0-r1.ebuild 2552
+EBUILD conky-1.4.1.ebuild 2614 RMD160 bd7244f44781a7e53927df801b717f622074093c SHA1 bcb92f980beed48ac7dc01cb1a87cb796d4d49fb SHA256 63ebfd34b31926c00727e2b468fd65c47d7f4c5ef61b407afde59f1af64534ff
+MD5 3c2cc720a067d7710313ce6f72c23444 conky-1.4.1.ebuild 2614
+RMD160 bd7244f44781a7e53927df801b717f622074093c conky-1.4.1.ebuild 2614
+SHA256 63ebfd34b31926c00727e2b468fd65c47d7f4c5ef61b407afde59f1af64534ff conky-1.4.1.ebuild 2614
+EBUILD conky-1.4.2.ebuild 2603 RMD160 749ee3dc3836a4cfe8bfb0ab57bb727af2adc799 SHA1 cb411a06da4aac6a367b5cfd2d6b035af7c76ef4 SHA256 db4dd059345306849f8fba1d93c6bd4c588598427992814c63ebe62d746fe98d
+MD5 820af99b306ed3739b50be666010ccf7 conky-1.4.2.ebuild 2603
+RMD160 749ee3dc3836a4cfe8bfb0ab57bb727af2adc799 conky-1.4.2.ebuild 2603
+SHA256 db4dd059345306849f8fba1d93c6bd4c588598427992814c63ebe62d746fe98d conky-1.4.2.ebuild 2603
+MISC ChangeLog 5580 RMD160 9b339899686bd37bfb9aa2544ab2682841fe693d SHA1 df6c9f1fbcb7da8cc0e580d4a3e2330290c8afe1 SHA256 7451f1842873652317c514d1a54f197d6047f836d76333551bdf2e6a5cffa7e3
+MD5 b9265c256856ceb9f95e25e2f5df4551 ChangeLog 5580
+RMD160 9b339899686bd37bfb9aa2544ab2682841fe693d ChangeLog 5580
+SHA256 7451f1842873652317c514d1a54f197d6047f836d76333551bdf2e6a5cffa7e3 ChangeLog 5580
+MISC metadata.xml 588 RMD160 b40ff9a4903b330dcef016836e32f78709f10d0a SHA1 f527b347a0cc1331f86fdf2411a2716674d6fbdb SHA256 6cf91473c528b64d87041a3088f4930e270349ebdebd3c6dca06dc4943370b5a
 MD5 32bd4230c3ee12a8d5502d4bd57a9a3d metadata.xml 588
+RMD160 b40ff9a4903b330dcef016836e32f78709f10d0a metadata.xml 588
+SHA256 6cf91473c528b64d87041a3088f4930e270349ebdebd3c6dca06dc4943370b5a metadata.xml 588
+MD5 c55fb1487c2bca9b6ea69c92843bcaae files/digest-conky-1.3.4-r2 238
+RMD160 42085cf3f169a6ee9067bea9917d63f1dabf046a files/digest-conky-1.3.4-r2 238
+SHA256 a388ff1048d835a4a210aea54d7de4fcab095c5e34f39e253339a0828e0fa908 files/digest-conky-1.3.4-r2 238
+MD5 113c0f8393e0eaac049cfd63dd5395ad files/digest-conky-1.3.5-r1 238
+RMD160 7c0854d076f7e54ae71aa213cd7cca655f798089 files/digest-conky-1.3.5-r1 238
+SHA256 ea1c25dee1a62fca62b51b07051751b6830a4312f1fa847d72bc1b5b9a2fd2c7 files/digest-conky-1.3.5-r1 238
+MD5 dd1c99f09b0ec583eadca05832f8c5ea files/digest-conky-1.4.0-r1 238
+RMD160 4743c690e8a6d5923fd3a83d25c1f021549978cb files/digest-conky-1.4.0-r1 238
+SHA256 61e0266fd2231aa366ed5009e12d8667da17bc789f026bf0dd082af02853261f files/digest-conky-1.4.0-r1 238
+MD5 bb654fedea893b35ec7677d0dd6e1912 files/digest-conky-1.4.1 238
+RMD160 576e0ac8989b47af56c33f02bf634fac1f72b230 files/digest-conky-1.4.1 238
+SHA256 97f947b3bba8cb1c747b19c99b6a4500e7b6acaa709e667c8919564669872109 files/digest-conky-1.4.1 238
+MD5 8669fb84e545dd83e96aa87a60c83c67 files/digest-conky-1.4.2 238
+RMD160 6ecbeb97f9cd77a1b0b12b604c210b5632b4189f files/digest-conky-1.4.2 238
+SHA256 8d00a420a57f5165242e9e5d7706f84c37922314b23a6ab215405942e49094bd files/digest-conky-1.4.2 238
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.3-ecc0.1.6 (GNU/Linux)
+
+iD8DBQFEjHvFp5vW4rUFj5oRAlQoAKCKkN7IE4bk7stDxhCJg2V4GG+uWwCeLgvb
+h3tm7F2tvBu9D3mezkF45Z8=
+=lkOY
+-----END PGP SIGNATURE-----
