@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/conky/conky-1.4.1.ebuild,v 1.3 2006/04/12 16:43:24 tcort Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/conky/conky-1.4.1.ebuild,v 1.4 2006/06/11 20:23:09 chainsaw Exp $
 
 inherit eutils
 
@@ -11,7 +11,7 @@ SRC_URI="mirror://sourceforge/conky/${P}.tar.bz2"
 LICENSE="BSD"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~ppc ~ppc64 ~sparc ~x86"
-IUSE="truetype X ipv6 bmpx bmp xmms infopipe audacious"
+IUSE="truetype X ipv6 bmpx xmms infopipe audacious"
 
 DEPEND_COMMON="
 	virtual/libc
@@ -29,7 +29,6 @@ DEPEND_COMMON="
 		bmpx? ( media-sound/bmpx
 				>=sys-apps/dbus-0.35
 			)
-		bmp? ( media-sound/beep-media-player )
 		audacious? ( media-sound/audacious )
 		infopipe? ( media-plugins/xmms-infopipe )
 		xmms? ( media-sound/xmms )
@@ -77,7 +76,6 @@ src_compile() {
 		$(use_enable truetype xft) \
 		$(use_enable X x11) \
 		$(use_enable bmpx) \
-		$(use_enable bmp) \
 		$(use_enable xmms) \
 		$(use_enable audacious) \
 		$(use_enable infopipe) \
