@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/conky
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/conky/ChangeLog,v 1.31 2006/05/21 09:10:37 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/conky/ChangeLog,v 1.32 2006/06/11 20:23:09 chainsaw Exp $
+
+  11 Jun 2006; Tony Vroon <chainsaw@gentoo.org> conky-1.4.1.ebuild,
+  conky-1.4.2.ebuild:
+  Remove references to beep-media-player, which is no longer in the tree.
 
   21 May 2006; Markus Rothe <corsair@gentoo.org> conky-1.4.0-r1.ebuild:
   Stable on ppc64
